S7 Eth driver 1.1